--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "fuse.js": "^7.1.0",
     "next": "^15.1.7",
     "next-mdx-remote": "^5.0.0",
