--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^15.1.7",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.6.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.3",
